# python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
logmachine/: __init__.py  main.py
