[project]
name = "logmachine"
version = "2.3.1"
description = "Collaborative, beautiful logging system for distributed developers"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name="Mugabo Gusenga", email="mugabo@bufferpunk.com" }
]
keywords = ["logging", "devtools", "collaborative", "open source", "cli", "json", "ansi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://logmachine.bufferpunk.com"
Documentation = "https://github.com/logmachine/python"
Source = "https://github.com/logmachine/python"
Tracker = "https://github.com/logmachine/python/issues"

[build-system]
requires = ["setuptools>=61.0", "requests"]
build-backend = "setuptools.build_meta"
